Fix Top Stories visibility by adding padding-top to Home container

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -11,6 +11,7 @@
     .home-container {
         padding-left: 1rem;
         padding-right: 1rem;
+        padding-top: 20px;
     }
 }
 
